--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://prossotto.github.io/cygnusweb"
+  "homepage": "https://prossotto.github.io/cygnusweb/"
 }
